# chat-assistant

./: .env.example  .env.local.example  .gitignore  .npmrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  AWS_DEPLOYMENT_GUIDE.md  CONTRIBUTING.md  MANUAL-TESTING.md  MCP-Servers-Testing-Collection.json  POSTMAN-MCP-TESTING.md  POSTMAN-TESTING.md  QUICK-TEST.md  QUICK_START.md  README.md  SIMPLE_AWS_DEPLOY.md  TESTING.md  WEBSOCKET-MCP-TESTING.md  backend-task-def.json  bedrock-policy.json  cloudwatch-dashboard.json  cors.json  deploy-to-aws.sh  docker-compose.prod.yml  docker-compose.yml  fix-docker-proxy.ps1  frontend-task-def.json  logs-policy.json  mcp-websocket-test.html  monitor.sh  nginx.conf  package-lock.json  package.json  pyproject.toml  route53-record.json  s3-policy.json  secrets-policy.json  setup-server.sh  ssl-validation-records.json  (+2 more)
.claude/: settings.local.json
.github/workflows/: deploy-staging.yml  deploy.yml  pr-checks.yml
apps/: __init__.py
apps/orchestrator/: __init__.py  main.py
apps/smoke/: __init__.py  orchestrator.py  smoke_orchestrator_local.py  smoke_report_local.py  smoke_tools_local.py
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js
apps/web/src/: App.tsx  index.css
apps/web/src/components/: ChatHistory.tsx  ChatInput.tsx  ChatMessage.tsx  FileUpload.tsx  HeroSearch.tsx  Icons.tsx  Sidebar.tsx
apps/web/src/pages/: index.tsx
aws/: backend-staging-task.json  backend-task-def.json  frontend-staging-task.json  frontend-task-def.json  setup-staging.sh
backend/: app.py  bedrock_client.py  fix_s3_permissions.py  models.py  requirements.txt  run.py
backend/app/: main.py
backend/mcp/: doc_parser.py  finance.py  findb.py  rag.py  report.py  web.py
backend/orchestrator/: graph.py  router.py  state.py
backend/prompts/: pre_screening.py  system.py
backend/scripts/: fix_s3_permissions.py
backend/tests/: run_all_uat_tests.py  run_test_case_a_prescreening.py  run_test_case_b_sofr.py  run_test_case_c_extraction.py  test_case_a_prescreening.py  test_case_c_extraction.py  test_doc_parser_standalone.py  test_end_to_end.py  test_pdf_detailed.py  test_pdf_flow.py  test_placeholder.py  test_s3_textract.py
config/: agents.yaml  mcp_servers.yaml
docs/: AWS_SETUP.md  CLAUDE.md  ORCHESTRATION_EXPLAINED.md  PDF_PARSING_TEST_RESULTS.md  PDF_UPLOAD_FIX.md  PROJECT_STRUCTURE.md  QUICKSTART.md  RUNNING.md  SETUP_COMPLETE.md  STATUS.md  security.md
docs/adrs/: ADR-0001-multi-agent-architecture.md  README.md
docs/postman/: orchestrator.postman_collection.json
docs/runbooks/: README.md
frontend/: .env.production  Dockerfile.prod  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/api/auth/[...nextauth]/: route.ts
frontend/app/auth/signin/: page.tsx
frontend/app/login/: page.tsx
frontend/chat-ai/: package-lock.json  package.json
frontend/chat-ai/app/: page.tsx
frontend/components/: chat-interface.tsx  message-list.tsx
frontend/lib/: cognito.ts
frontend/types/: next-auth.d.ts
infra/cdk/: app.ts  cdk.json  package-lock.json  package.json  tsconfig.json
infra/cdk/lib/: mavik-ai-api-stack-minimal.ts  mavik-ai-api-stack.ts  mavik-ai-compute-stack.ts  mavik-ai-data-stack-minimal.ts  mavik-ai-data-stack.ts  mavik-ai-infrastructure-stack.ts  mavik-ai-network-stack.ts  mavik-ai-security-stack.ts
infra/services/mcp-report/lambda/: index.py
infra/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
mavik_ai/: __init__.py
scripts/: run-all-tests.py  setup-dev-environment.ps1  setup-dev-environment.sh  test-findb-server.py  test-infrastructure.py  test-integration.py  test-parser-server.py  test-rag-server.py
scripts/sql/: init-findb.sql
services/: __init__.py
services/authorizer/: README.md  pyproject.toml
services/authorizer/src/authorizer/: __init__.py  access_control.py  handler.py  jwt_validator.py
services/authorizer/tests/: conftest.py  test_authorizer.py
services/mcp_servers/findb/: Dockerfile  README.md  pyproject.toml
services/mcp_servers/findb/src/findb_server/: __init__.py  financial_database.py  main.py
services/mcp_servers/findb/tests/: conftest.py  test_findb_server.py
services/mcp_servers/parser/: Dockerfile  README.md  pyproject.toml
services/mcp_servers/parser/src/parser_server/: __init__.py  document_parser.py  main.py
services/mcp_servers/parser/tests/: conftest.py  test_parser_server.py
services/mcp_servers/rag/: Dockerfile  README.md  pyproject.toml
services/mcp_servers/rag/src/rag_server/: __init__.py  document_processor.py  health.py  main.py  vector_search.py
services/mcp_servers/rag/tests/: conftest.py  test_rag_server.py
services/mcp_servers/web/: pyproject.toml
services/mcp_servers/web/src/web_server/: __init__.py
services/orchestrator/: main.py
tests/: Test.md  UAT_REPORT.md  check.md
tests/common/: test_auth.py  test_models.py  test_repo_structure.py
tests/orchestrator/: test_api.py  test_chat.py
