[tool.poetry]
name = "mavik-rag-server"
version = "0.1.0"
description = "MCP RAG Server for document search and retrieval"
authors = ["Mavik Capital <engineering@mavikcapital.com>"]
packages = [
    { include = "rag_server", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
websockets = "^12.0"
pydantic = "^2.5.0"
mcp = "^1.0.0"

# Local packages
mavik-common = {path = "../../../packages/common", develop = true}
mavik-aws-clients = {path = "../../../packages/aws_clients", develop = true}
mavik-config = {path = "../../../packages/config", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-mock = "^3.12.0"
black = "^23.11.0"
mypy = "^1.7.1"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E", "W", "F", "I", "B", "C4", "UP",
]
ignore = [
    "E501",  # line too long, handled by black
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
