[tool.poetry]
name = "web-mcp-server"
version = "0.1.0"
description = "Web Search and Content Extraction MCP Server for market research"
authors = ["Mavik AI Team"]
readme = "README.md"
packages = [{include = "web_server", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
websockets = "^12.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
httpx = "^0.25.0"
aiohttp = "^3.9.0"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.0"
html2text = "^2020.1.16"
readability-lxml = "^0.8.1"
newspaper3k = "^0.2.8"
selenium = "^4.15.0"
playwright = "^1.40.0"
requests-cache = "^1.1.0"
feedparser = "^6.0.10"
structlog = "^23.2.0"
redis = "^5.0.0"
diskcache = "^5.6.3"
ratelimit = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-httpx = "^0.26.0"
black = "^23.11.0"
ruff = "^0.1.7"
mypy = "^1.7.0"
pre-commit = "^3.6.0"
responses = "^0.24.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src/web_server --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/web_server"]
omit = [
    "tests/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]